--- a/day-three/styles.css
+++ b/day-three/styles.css
@@ -1,6 +1,22 @@
+:root {
+    --base: #95221D;
+    --spacing: 10px;
+    --blur: 10px;
+}
+
+img {
+    padding: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+}
+
+h1 {
+    color: var(--base);
+}
+
 body {
     text-align: center;
-    background: #193549;
+    background: var(--base);
     color: white;
     font-family: 'helvetica neue', sans-serif;
     font-weight: 100;
